Fix jumping menu

--- a/src/assets/scss/custom/reactstrap/_buttons.scss
+++ b/src/assets/scss/custom/reactstrap/_buttons.scss
@@ -1,6 +1,10 @@
-button, a {
+button {
   outline: none !important;
   margin-right: 5px;
   margin-top: 2px;
   margin-bottom: 2px;
+}
+
+a {
+  outline: none !important;
 }
